preventing overflow in css

--- a/overflow.css
+++ b/overflow.css
@@ -1,4 +1,4 @@
-<!--preventing overflow-->
+/*preventing overflow (html code is commented out)
 
 <!DOCTYPE html>
 <html lang="en">
@@ -6,19 +6,20 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
-    <style>
+    <style>*/
         .box{
             border: 2px solid red;
             width: 200px;
             height: 40px;/*overflow*/
             overflow: hidden;/*overflown text is hidden*/
-            /*overflow: scroll;
-            /*overflow: auto;/*can be scrolled only if overflow exists*/
+            overflow: scroll;/*can be scrolled only if overflow exists*/
+            overflow: auto;/*similar to scroll but adds scrollbar if necessary*/
         }
-    </style>
+            
+    /*</style>
 </head>
 <body>
     <div class="box">This box has a height and a width Lorem ipsum dolor sit amet consectetur, adipisicing elit. Itaque sit nemo, voluptatem consequatur porro cupiditate, quibusdam nostrum libero fuga aperiam explicabo? Culpa natus voluptatum eius labore ullam vel impedit, cum expedita voluptate ut soluta repudiandae quibusdam magni dicta cumque eum eos maiores delectus architecto atque, laboriosam modi id possimus nulla.</div>
     
 </body>
-</html>
+</html>*/
